# Introduction_to_LLMs

./: README.md
Agentic_Systems/: README.md
Agentic_Systems/LangGraph/prototype/: README.md  Simple_memoryless_Chatbot.ipynb  chatbot_with_memory_and_tools.ipynb  prototype.ipynb  pyproject.toml
Agentic_Systems/crewai/: README.md
Agentic_Systems/crewai/mahpad/output/: retrieved.json
Agentic_Systems/crewai/mahpad/src/mahpad/: crew.py  main.py
Agentic_Systems/crewai/mahpad/src/mahpad/config/: agents.yaml
Agentic_Systems/crewai/mahpad_crew/: README.md  pyproject.toml
Agentic_Systems/crewai/mahpad_crew/output/: report.md
Agentic_Systems/crewai/mahpad_crew/src/mahpad/config/: tasks.yaml
Agentic_Systems/crewai/mahpad_crew/src/mahpad/tools/: retrieval_tool.py
Agentic_Systems/crewai/mahpad_flow/mahpad/: README.md  crewai_flow.html  docker-compose.yml  pyproject.toml
Agentic_Systems/crewai/mahpad_flow/mahpad/output/: Final_State.json  report.md
Agentic_Systems/crewai/mahpad_flow/mahpad/src/mahpad/: main.py
Agentic_Systems/crewai/mahpad_flow/mahpad/src/mahpad/crews/nl_to_sql/: nl_to_sql.py
Agentic_Systems/crewai/mahpad_flow/mahpad/src/mahpad/crews/reporter/: reporter.py
Agentic_Systems/n8n/: README.md  docker-compose.yml
Agentic_Systems/n8n/workflows/: Prompt Engineering.json
Architecture/: README.md
Context_Engineering/: Context_Engineering.md  README.md
Ollama/: README.md  test_chat.py
Ollama/ollama_models/gemma-3-4B-it-QAT-Q4/: Modelfile
Transformers_and_Litellm/: LLM_ROADMAP.ipynb
(+4 files in other folders)
