[project]
name = "prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langsmith>=0.4.34",
    "litellm>=1.78.0",
]
