[project]
name = "mahpad"
version = "0.1.0"
description = "mahpad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
]

[project.scripts]
mahpad = "mahpad.main:run"
run_crew = "mahpad.main:run"
train = "mahpad.main:train"
replay = "mahpad.main:replay"
test = "mahpad.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
